--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>My Website's landing page</title>
 </head>
 <body>
-    
+    <div class="header-and-hero">
+        <header class="header">
+            <div>Header Logo</div>
+            <div class="header-links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </div>
+        </header>
+        <div class="hero">
+            <div class="left-part">
+                <div class="hero-heading">This website is awesome</div>
+                <div class="hero-para">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                <button class="hero-button">Sign up</button>
+            </div>
+            <div class="right-part">
+                <img src="" alt="This is some random image that I found.">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
