--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
             </div>
         </div>
     </div>
+    <section class="img-section">
+        <h2>Some random information.</h2>
+        <div class="images">
+            <div class="image">
+                <img src="" alt="Another random image from somewhere">
+                <p class="image-text">this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="image">
+                <img src="" alt="Another random image from somewhere">
+                <p class="image-text">this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="image">
+                <img src="" alt="Another random image from somewhere">
+                <p class="image-text">this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="image">
+                <img src="" alt="Another random image from somewhere">
+                <p class="image-text">this is some subtext under an illustration or image.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
