--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <section class="img-section">
-        <h2>Some random information.</h2>
+        <h2 class="img-section-heading">Some random information.</h2>
         <div class="images">
             <div class="image">
                 <img src="" alt="Another random image from somewhere">
@@ -47,6 +47,10 @@
                 <p class="image-text">this is some subtext under an illustration or image.</p>
             </div>
         </div>
+    </section>
+    <section class="quote-section">
+        <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+        <cite>-Thor, Owner of Jonathan</cite>
     </section>
 </body>
 </html>
