--- a/index.html
+++ b/index.html
@@ -52,5 +52,14 @@
         <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
         <cite>-Thor, Owner of Jonathan</cite>
     </section>
+    <section class="call">
+        <div class="call-container">
+            <div class="call-text">
+                <p class="call-big-text">Call to action! It's time!</p>
+                <p class="call-small-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="call-button">Sign up</button>
+        </div>
+    </section>
 </body>
 </html>
