Add the footer of index.html

--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@
             <button class="call-button">Sign up</button>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-text">Copyright (c) The Odin Project 2021</div>
+    </footer>
 </body>
 </html>
