--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <div class="header-and-hero">
-        <header class="header">
-            <div>Header Logo</div>
-            <div class="header-links">
+        <header class="header flex">
+            <div class="header-logo">Header Logo</div>
+            <div class="header-links flex">
                 <a href="#">header link one</a>
                 <a href="#">header link two</a>
                 <a href="#">header link three</a>
             </div>
         </header>
-        <div class="hero">
-            <div class="left-part">
+        <div class="hero flex">
+            <div class="left-part flex">
                 <div class="hero-heading">This website is awesome</div>
                 <div class="hero-para">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
                 <button class="hero-button">Sign up</button>
@@ -29,7 +29,7 @@
     </div>
     <section class="img-section">
         <h2 class="img-section-heading">Some random information.</h2>
-        <div class="images">
+        <div class="images flex">
             <div class="image">
                 <img src="" alt="Another random image from somewhere">
                 <p class="image-text">this is some subtext under an illustration or image.</p>
@@ -48,12 +48,12 @@
             </div>
         </div>
     </section>
-    <section class="quote-section">
+    <section class="quote-section flex">
         <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
         <cite>-Thor, Owner of Jonathan</cite>
     </section>
-    <section class="call">
-        <div class="call-container">
+    <section class="call-section flex">
+        <div class="call-container flex">
             <div class="call-text">
                 <p class="call-big-text">Call to action! It's time!</p>
                 <p class="call-small-text">Sign up for our product by clicking that button right over there!</p>
@@ -61,7 +61,7 @@
             <button class="call-button">Sign up</button>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer flex">
         <div class="footer-text">Copyright (c) The Odin Project 2021</div>
     </footer>
 </body>
