Insert the images in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <button class="hero-button">Sign up</button>
             </div>
             <div class="right-part">
-                <img src="" alt="This is some random image that I found.">
+                <img src="./images/pexels-tatiana-syrikova-3933881.jpg" alt="This is some random image that I found.">
             </div>
         </div>
     </div>
@@ -31,19 +31,19 @@
         <h2 class="img-section-heading">Some random information.</h2>
         <div class="images flex">
             <div class="image">
-                <img src="" alt="Another random image from somewhere">
+                <img src="./images/pexels-gianluca-grisenti-4215102.jpg" alt="Another random image from somewhere">
                 <p class="image-text">this is some subtext under an illustration or image.</p>
             </div>
             <div class="image">
-                <img src="" alt="Another random image from somewhere">
+                <img src="./images/pexels-luis-dalvan-1770809.jpg" alt="Another random image from somewhere">
                 <p class="image-text">this is some subtext under an illustration or image.</p>
             </div>
             <div class="image">
-                <img src="" alt="Another random image from somewhere">
+                <img src="./images/pexels-mohamad-tamer-2406785.jpg" alt="Another random image from somewhere">
                 <p class="image-text">this is some subtext under an illustration or image.</p>
             </div>
             <div class="image">
-                <img src="" alt="Another random image from somewhere">
+                <img src="./images/pexels-rachel-claire-4577122.jpg" alt="Another random image from somewhere">
                 <p class="image-text">this is some subtext under an illustration or image.</p>
             </div>
         </div>
