--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <section class="img-section">
+    <section class="img-section flex">
         <h2 class="img-section-heading">Some random information.</h2>
         <div class="images flex">
             <div class="image">
@@ -52,8 +52,10 @@
         </div>
     </section>
     <section class="quote-section flex">
-        <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
-        <cite>-Thor, Owner of Jonathan</cite>
+        <div class="quote-cont flex">
+            <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+            <cite>-Thor, Owner of Jonathan</cite>
+        </div>
     </section>
     <section class="call-section flex">
         <div class="call-container flex">
