Remove redundancies and decrease repetition

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header-and-hero">
+    <div class="header-and-hero white-text">
         <header class="header flex">
             <div class="header-logo">Header Logo</div>
             <div class="header-links flex">
@@ -20,17 +20,17 @@
             </div>
         </header>
         <div class="hero flex">
-            <div class="left-part flex">
+            <div class="left-part column flex">
                 <div class="hero-heading">This website is awesome</div>
                 <div class="hero-para">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
-                <button class="hero-button">Sign up</button>
+                <button class="hero-button blue-bg">Sign up</button>
             </div>
             <div class="right-part">
                 <img src="./images/pexels-tatiana-syrikova-3933881.jpg" alt="This is some random image that I found.">
             </div>
         </div>
     </div>
-    <section class="img-section flex">
+    <section class="img-section column flex">
         <h2 class="img-section-heading">Some random information.</h2>
         <div class="images flex">
             <div class="image">
@@ -52,22 +52,22 @@
         </div>
     </section>
     <section class="quote-section flex">
-        <div class="quote-cont flex">
+        <div class="quote-cont flex column">
             <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
             <cite>-Thor, Owner of Jonathan</cite>
         </div>
     </section>
     <section class="call-section flex">
-        <div class="call-container flex">
+        <div class="call-container blue-bg flex">
             <div class="call-text">
                 <p class="call-big-text">Call to action! It's time!</p>
                 <p class="call-small-text">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button class="call-button">Sign up</button>
+            <button class="call-button blue-bg">Sign up</button>
         </div>
     </section>
     <footer class="footer flex">
-        <div class="footer-text">Copyright (c) The Odin Project 2021</div>
+        <div class="white-text">Copyright (c) The Odin Project 2021</div>
     </footer>
 </body>
 </html>
