Update the copyright symbol in index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </section>
     <footer class="footer flex">
-        <div class="white-text">Copyright (c) The Odin Project 2021</div>
+        <div class="white-text">Copyright &copy; The Odin Project 2021</div>
     </footer>
 </body>
 </html>
