--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     <div class="header-and-hero white-text">
         <header class="header flex">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo">Nature is Lit</div>
             <div class="header-links flex">
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
+                <a href="#">Gallery</a>
+                <a href="#">Animals</a>
+                <a href="#">Travel</a>
             </div>
         </header>
         <div class="hero flex">
             <div class="left-part column flex">
-                <div class="hero-heading">This website is awesome</div>
-                <div class="hero-para">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+                <div class="hero-heading">Nature is really awesome</div>
+                <div class="hero-para">This website is dedicated to showcase just a tiny bit of how magical and amazing our world is. Enjoy!</div>
                 <button class="hero-button blue-bg">Sign up</button>
             </div>
             <div class="right-part">
@@ -31,37 +31,37 @@
         </div>
     </div>
     <section class="img-section column flex">
-        <h2 class="img-section-heading">Some random information.</h2>
+        <h2 class="img-section-heading">What you'll find here.</h2>
         <div class="images flex">
             <div class="image">
                 <img src="./images/pexels-gianluca-grisenti-4215102.jpg" alt="Another random image from somewhere">
-                <p class="image-text">this is some subtext under an illustration or image.</p>
+                <p class="image-text">Explore the beautiful mountains of the planet that reach for the stars.</p>
             </div>
             <div class="image">
                 <img src="./images/pexels-luis-dalvan-1770809.jpg" alt="Another random image from somewhere">
-                <p class="image-text">this is some subtext under an illustration or image.</p>
+                <p class="image-text">Get a glimpse of the diverse plant life found on earth.</p>
             </div>
             <div class="image">
                 <img src="./images/pexels-mohamad-tamer-2406785.jpg" alt="Another random image from somewhere">
-                <p class="image-text">this is some subtext under an illustration or image.</p>
+                <p class="image-text">See the different habitats on earth, and how each one has its own unique ecosystem.</p>
             </div>
             <div class="image">
                 <img src="./images/pexels-rachel-claire-4577122.jpg" alt="Another random image from somewhere">
-                <p class="image-text">this is some subtext under an illustration or image.</p>
+                <p class="image-text">Find out what majesterial creatures can be found on the planet.</p>
             </div>
         </div>
     </section>
     <section class="quote-section flex">
         <div class="quote-cont flex column">
-            <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
-            <cite>-Thor, Owner of Jonathan</cite>
+            <blockquote>We still don't know one thousandth of one percent of what nature has revealed to us.</blockquote>
+            <cite>-Albert Einstein</cite>
         </div>
-    </section>
+    </section> 
     <section class="call-section flex">
         <div class="call-container blue-bg flex">
             <div class="call-text">
-                <p class="call-big-text">Call to action! It's time!</p>
-                <p class="call-small-text">Sign up for our product by clicking that button right over there!</p>
+                <p class="call-big-text">Get to know Earth!</p>
+                <p class="call-small-text">Sign up to our website to get regular notifications and awesome articles. </p>
             </div>
             <button class="call-button blue-bg">Sign up</button>
         </div>
