--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img class="bg-img" src="./images/pexels-michael-block-3225517.jpg" alt="An imgae of nature showing mountains and whatnot">
     <div class="header-and-hero white-text">
         <header class="header flex">
             <div class="header-logo">Nature is Lit</div>
