--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </section>
     <footer class="footer flex">
-        <div class="white-text">Copyright &copy; The Odin Project 2021</div>
+        <div class="white-text">Copyright &copy; Yunus Kedir 2023</div>
     </footer>
 </body>
 </html>
